--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "assignment-template",
+  "type": "module",
   "version": "1.0.0",
   "description": "This is a template repository for the first assignment in BVD 103 at McMaster Continuing Education.",
   "main": "index.ts",
