--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,52 @@
+upstream backend_servers {
+    server server1:3000;
+    server server2:3000;
+    server server3:3000;
+}
+
+# http context
+proxy_cache_path /var/lib/nginx/cache levels=1:2 keys_zone=backcache:8m max_size=50m;
+proxy_cache_key "$scheme$request_method$host$request_uri$is_args$args";
+proxy_cache_valid 200 302 10m;
+proxy_cache_valid 404 1m;
+
 server {
     listen 80;
 
     location / {
         proxy_pass http://front-end:9080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     location /api/ {
-        proxy_pass http://server:3000/;
+        proxy_pass http://backend_servers/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    #cache
+    location ^~ /api/books/  {
+        # Only cache if no query parameters
+        set $no_cache 0;
+        if ($args) {
+            set $no_cache 1;
+        }
+        
+        proxy_cache backcache;
+        proxy_cache_bypass $no_cache;
+        proxy_no_cache $no_cache;
+        add_header X-Proxy-Cache $upstream_cache_status;
+
+        proxy_pass http://backend_servers/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
 
